// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.eyespynature.net"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Eye Spy Nature
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.eyespynature.net"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Eye Spy Nature
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.eyespynature.net"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Eye Spy Nature
</a>
`;
